# FFFFBCB769D-A759-4018-9102-3D96A614C063

./: .gitignore  AGENTS.md  CMakeLists.txt  app.manifest  common.h  config.cpp  config.h  main.cpp  overlay_engine.cpp  overlay_engine.h  resource.rc  security.cpp  security.h  svg_icons.cpp  svg_icons.h  timer_engine.cpp  timer_engine.h  tray.cpp  tray.h  ui_overlay.cpp  ui_overlay.h  ui_setup.cpp  ui_setup.h  ui_unlock.cpp  ui_unlock.h  旧版本.md
resources/: app_icon.rc
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  CountdownEngine.cpp  CountdownEngine.h  SessionLogger.cpp  SessionLogger.h
src/system/: PowerManager.cpp  PowerManager.h  ProcessProtector.cpp  ProcessProtector.h  SystemHookManager.cpp  SystemHookManager.h  TopMostGuard.cpp  TopMostGuard.h
src/ui/: LockScreenWindow.cpp  LockScreenWindow.h  PreLockNotification.cpp  PreLockNotification.h  SettingsPanel.cpp  SettingsPanel.h  SetupDialog.cpp  SetupDialog.h  TrayManager.cpp  TrayManager.h  UnlockDialog.cpp  UnlockDialog.h
src/utils/: SvgIcon.cpp  SvgIcon.h
